running code, working on redoing test framework